# temoto_architecture_demos

./: .gitignore  .gitmodules  README.md
src/: .gitignore
src/demo_1/dummy_components/: CMakeLists.txt  package.xml
src/demo_1/dummy_components/src/: component_string_2_a.cpp  component_string_2_b.cpp
src/demo_1/pointcloud_filters/: CMakeLists.txt  package.xml
src/demo_1/pointcloud_filters/src/: pointcloud_filter_a.cpp  pointcloud_filter_b.cpp
src/robot_setup/: .gitignore
src/robot_setup/temoto_gripper_converter/: CMakeLists.txt  package.xml
src/robot_setup/temoto_gripper_converter/launch/: xarm_gripper_temoto_controller.launch  xarm_gripper_temoto_driver.launch
src/robot_setup/temoto_gripper_converter/src/: kinova_gripper_wrapper.cpp  xArm_gripper_controller.cpp  xArm_gripper_driver.cpp
src/robot_setup/xarm7_mov_test/: CMakeLists.txt  package.xml
src/robot_setup/xarm7_mov_test/src/: moveit_node2.cpp
src/robot_setup/xarm7_mov_test/urdf/: xarm7_with_base.xacro  xarm7_with_gripper.xacro
src/robot_setup/xarm7_wgrip_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/robot_setup/xarm7_wgrip_moveit/config/: fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  ompl_planning.yaml  ros_controllers.yaml  xarm7_robot_with_base.srdf
src/robot_setup/xarm7_wgrip_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  demo_test.launch  demo_test2.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_execution.launch  planning_pipeline.launch.xml  real_with_gripper.launch  real_with_gripper_test.launch  ros_controllers.launch  run_benchmark_ompl.launch  rviz_common.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  xarm7_robot_with_base_moveit_controller_manager.launch.xml
src/temoto_ws/actions/ta_delay/: CMakeLists.txt  package.xml  (+1 more)
src/temoto_ws/temoto_ws/: CMakeLists.txt  components.yaml  package.xml  pipes.yaml
src/temoto_ws/temoto_ws/config/: camera_calibration_params.yaml  components.yaml  jackal_rviz_config.rviz  pipes.yaml  robot_description.yaml  robot_description.yaml.save
src/temoto_ws/temoto_ws/launch/: action_assistant.launch  ar_tag_remappable.launch  clearbot_driver.launch  controller_temoto.launch  driver_temoto.launch  jackal_controller.launch  jackal_controller_bak.launch  jackal_driver.launch  jackal_driver_v2.launch  joy_teleop.launch  nodelet.launch.xml  os1_remappable.launch  rs_camera.launch  temoto.launch  urg_node_remappable.launch  usb_cam_remappable.launch  xarm7_controller.launch  xarm7_driver.launch
src/temoto_ws/temoto_ws/monitoring/: .gitignore  System Monitor-1585747663733.json  get_clearbot_power_metrics  get_jackal_power_metrics  grafana_dashboard.json  memory_parser  metrics_parser  monitoring_tools_setup.sh  prometheus.yml  setup_monitoring.sh  setup_pushgateway.bash  setup_pushgateway.sh  start_monitoring.sh  start_sending_metrics.bash  start_sending_metrics.sh
src/temoto_ws/temoto_ws/scripts/: ar_tag_follower.py  set_ros_master.bash  setup_temoto_environment.bash  start_monitored_temoto.bash
src/temoto_ws/temoto_ws/src/: cmd_vel_stabilizer.cpp
src/temoto_ws/temoto_ws/tracing/: .gitignore  setup_jaeger.bash  start_tracer_agent.bash  tracer_config.yaml
src/temoto_ws/umrf_graphs/: .umrfg.json  demo3_surveillance_mission.umrfg.json  demo3_transportation_mission.umrfg.json  ewrfgwe.umrfg.json  navigation_test_graph_1.umrfg.json  test_dropping_sequence.umrfg.json  xarm_echo_eef_pose.umrfg.json
src/temoto_ws/umrf_parameters/: pose.param.umrf.json
(+104 files in other folders)
